Use master as gh-pages branch

--- a/css/style.css
+++ b/css/style.css
@@ -1,268 +1,1 @@
-/**
- * content style
- */
-
-/* general style */
-html {
-  font-family: "PT Sans", Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
-}
-@media (min-width: 38em) {
-  html {
-    font-size: 20px;
-  }
-}
-
-body {
-    font-size: inherit;
-    font-family: inherit;
-}
-
-/* Headings */
-h1, h2, h3, h4, h5, h6 {
-  font-weight: 400;
-  color: #313131;
-  letter-spacing: -.025rem;
-  margin-bottom: .5rem;
-  line-height: 1.25;
-  text-rendering: optimizeLegibility;
-}
-h1 {
-  font-size: 2rem;
-}
-h2 {
-  margin-top: 1rem;
-  font-size: 1.5rem;
-}
-h3 {
-  margin-top: 1.5rem;
-  font-size: 1.25rem;
-}
-h4, h5, h6 {
-  margin-top: 1rem;
-  font-size: 1rem;
-}
-
-/* Links */
-a {
-  color: #3366cc;
-  text-decoration: none;
-}
-a strong {
-  color: inherit;
-}
-
-/* `:focus` is linked to `:hover` for basic accessibility */
-a:hover,
-a:focus {
-  color: #6699ff;
-  text-decoration: none;
-}
-
-/* Body text */
-p {
-  margin-top: 0;
-  margin-bottom: 1rem;
-}
-
-/* Lists */
-ul, ol, dl {
-  margin-top: 0;
-  margin-bottom: 1rem;
-}
-
-dt {
-  font-weight: bold;
-}
-dd {
-  margin-bottom: .5rem;
-}
-
-/* Misc */
-hr {
-  position: relative;
-  margin: 1.5rem 0;
-  border: 0;
-  border-top: 1px solid #eee;
-  border-bottom: 1px solid #fff;
-}
-
-abbr {
-  font-size: 85%;
-  font-weight: bold;
-  color: #555;
-  text-transform: uppercase;
-}
-
-abbr[title] {
-  cursor: help;
-  border-bottom: 1px dotted #e5e5e5;
-}
-
-/* Code */
-code,
-pre {
-  font-family: Menlo, Monaco, "Courier New", monospace;
-}
-
-code {
-  padding: .25em .5em;
-  font-size: 85%;
-  color: #bf616a;
-  background-color: #f9f9f9;
-  border-radius: 3px;
-}
-
-pre {
-  display: block;
-  margin-top: 0;
-  margin-bottom: 1rem;
-  padding: 1rem;
-  font-size: .8rem;
-  line-height: 1.4;
-  white-space: pre;
-  white-space: pre-wrap;
-  word-break: break-all;
-  word-wrap: break-word;
-  background-color: #f9f9f9;
-  border: 0;
-}
-
-pre code {
-  padding: 0;
-  font-size: 100%;
-  color: inherit;
-  background-color: transparent;
-}
-
-.page-title {
-  font-size: 2.25rem;
-}
-
-/* navbar */
-.navbar-brand .avatar {
-  border: 1px solid #ccc;
-  border-radius: 50%;
-  display: inline-block;
-  width: 42px;
-  height: 42px;
-}
-
-.navbar-default {
-  background-color: white;
-  border-color: transparent;
-}
-.navbar-default .navbar-nav > li.active > a {
-  color: #3366cc;
-  border-bottom: 0.1rem solid #3366cc;
-}
-.navbar-default .navbar-nav > li > a {
-  color: black;
-  background: transparent !important;
-  font-size: 0.8rem;
-}
-.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
-  color: #3366cc !important;
-  background: transparent !important;
-}
-.navbar-brand {
-  font-weight: 700;
-  font-size: 1rem;
-}
-.navbar-default .navbar-brand {
-    color: #3366cc;
-}
-.navbar-default .navbar-brand:focus,
-.navbar-default .navbar-brand:hover {
-    color: #66ccff;
-}
-
-/* footer */
-.footer {
-  margin-top: 1rem;
-  font-size: 14px;
-}
-
-.copyright {
-  float:left;
-}
-.poweredby {
-  float:right;
-}
-
-/* post elements */
-.post-title {
-  font-size: 2.25rem;
-}
-.post-date {
-  margin-top: -.5rem;
-  margin-bottom: 1rem;
-  color: #9a9a9a;
-}
-
-.post {
-  font-family: "PT Serif", Georgia, "Times New Roman", serif;
-}
-
-/* pagination */
-.pagination {
-    width: 100%;
-    margin: 0;
-}
-.newer-posts {
-  float:left;
-}
-.older-posts {
-  float:right;
-}
-
-/* tag links */
-.tag-links {
-  margin: 10px;
-}
-.tag-links a {
-  background-color: #767676;
-  color: #fff;
-  display: inline-block;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1;
-  border-radius: 0 3px 3px 0;
-  margin: 2px 4px 2px 16px;
-  padding: 4px 8px;
-  position: relative;
-}
-
-.tag-links a:hover {
-  background-color: #3366cc;
-  color: #fff;
-  text-decoration: none;
-}
-
-.tag-links a:before {
-  border-top: 12px solid transparent;
-  border-right: 12px solid #767676;
-  border-bottom: 12px solid transparent;
-  content: "";
-  height: 0;
-  position: absolute;
-  top: 0;
-  left: -12px;
-  width: 0;
-}
-
-.tag-links a:hover:before {
-  border-right-color: #3366cc;
-}
-
-.tag-links a:after {
-  background-color: #fff;
-  border-radius: 50%;
-  content: "";
-  height: 6px;
-  position: absolute;
-  top: 9px;
-  left: -3px;
-  width: 6px;
-}
+ html{font-family:"PT Sans", Helvetica, Arial, sans-serif;font-size:16px;line-height:1.5}@media (min-width:38em){html{font-size:20px}}body{font-size:inherit;font-family:inherit}h1, h2, h3, h4, h5, h6{font-weight:400;color:#313131;letter-spacing:-.025rem;margin-bottom:.5rem;line-height:1.25;text-rendering:optimizeLegibility}h1{font-size:2rem}h2{margin-top:1rem;font-size:1.5rem}h3{margin-top:1.5rem;font-size:1.25rem}h4, h5, h6{margin-top:1rem;font-size:1rem}a{color:#3366cc;text-decoration:none}a strong{color:inherit}a:hover, a:focus{color:#6699ff;text-decoration:none}p{margin-top:0;margin-bottom:1rem}ul, ol, dl{margin-top:0;margin-bottom:1rem}dt{font-weight:bold}dd{margin-bottom:.5rem}hr{position:relative;margin:1.5rem 0;border:0;border-top:1px solid #eee;border-bottom:1px solid #fff}abbr{font-size:85%;font-weight:bold;color:#555;text-transform:uppercase}abbr[title]{cursor:help;border-bottom:1px dotted #e5e5e5}code, pre{font-family:Menlo, Monaco, "Courier New", monospace}code{padding:.25em .5em;font-size:85%;color:#bf616a;background-color:#f9f9f9;border-radius:3px}pre{display:block;margin-top:0;margin-bottom:1rem;padding:1rem;font-size:.8rem;line-height:1.4;white-space:pre;white-space:pre-wrap;word-break:break-all;word-wrap:break-word;background-color:#f9f9f9;border:0}pre code{padding:0;font-size:100%;color:inherit;background-color:transparent}.page-title{font-size:2.25rem}.navbar-brand .avatar{border:1px solid #ccc;border-radius:50%;display:inline-block;width:42px;height:42px}.navbar-default{background-color:white;border-color:transparent}.navbar-default .navbar-nav > li.active > a{color:#3366cc;border-bottom:0.1rem solid #3366cc}.navbar-default .navbar-nav > li > a{color:black;background:transparent !important;font-size:0.8rem}.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus{color:#3366cc !important;background:transparent !important}.navbar-brand{font-weight:700;font-size:1rem}.navbar-default .navbar-brand{color:#3366cc}.navbar-default .navbar-brand:focus, .navbar-default .navbar-brand:hover{color:#66ccff}.footer{margin-top:1rem;font-size:14px}.copyright{float:left}.poweredby{float:right}.post-title{font-size:2.25rem}.post-date{margin-top:-.5rem;margin-bottom:1rem;color:#9a9a9a}.post{font-family:"PT Serif", Georgia, "Times New Roman", serif}.pagination{width:100%;margin:0}.newer-posts{float:left}.older-posts{float:right}.tag-links{margin:10px}.tag-links a{background-color:#767676;color:#fff;display:inline-block;font-size:16px;font-weight:400;line-height:1;border-radius:0 3px 3px 0;margin:2px 4px 2px 16px;padding:4px 8px;position:relative}.tag-links a:hover{background-color:#3366cc;color:#fff;text-decoration:none}.tag-links a:before{border-top:12px solid transparent;border-right:12px solid #767676;border-bottom:12px solid transparent;content:"";height:0;position:absolute;top:0;left:-12px;width:0}.tag-links a:hover:before{border-right-color:#3366cc}.tag-links a:after{background-color:#fff;border-radius:50%;content:"";height:6px;position:absolute;top:9px;left:-3px;width:6px}
