Use about page as homepage

--- a/templates/default.html
+++ b/templates/default.html
@@ -30,10 +30,10 @@
         </div>
         <div class="navbar-collapse collapse navbar-right">
           <ul class="nav navbar-nav">
-            <li $if(blog)$ class="active" $endif$><a href="/">BLOG</a></li>
+            <li $if(blog)$ class="active" $endif$><a href="/blog">BLOG</a></li>
             <li $if(archive)$ class="active" $endif$><a href="/archive.html">ARCHIVE</a></li>
             <li $if(tag)$ class="active" $endif$><a href="/tagcloud.html">TAGS</a></li>
-            <li $if(about)$ class="active" $endif$><a href="/about.html">ABOUT</a></li>
+            <li $if(about)$ class="active" $endif$><a href="/index.html">ABOUT</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
